--- a/Client/Pages/Sklad/PrihodPage.xaml
+++ b/Client/Pages/Sklad/PrihodPage.xaml
@@ -33,17 +33,17 @@
         <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{Binding Prihod.Date_prih}" hc:InfoElement.Title="Дата"/>
         <TextBox Grid.Row="2" Grid.Column="0" Text="{Binding Prihod.Prim, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Title="Примечание"/>
 
-        <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Prihod.Cost_dost}" hc:InfoElement.Title="Стоимость доставки" IsEnabled="{Binding Prihod.Cost_Dost_Enable}"/>
+        <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Prihod.Deliv_cost}" hc:InfoElement.Title="Стоимость доставки" IsEnabled="{Binding Prihod.Cost_Dost_Enable}"/>
         <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding Prihod.Dop_rash}" hc:InfoElement.Title="Доп. расходы"/>
 
         <CheckBox Content="Транспорт поставщика" IsChecked="{Binding Prihod.Transport_ot_post}" Grid.Row="2" Grid.Column="2" x:Name="trans_ot_postCheckBox"/>
         <CheckBox Content="На складе" IsChecked="{Binding Prihod.Is_in_sklad}" Grid.Row="2" Grid.Column="3"/>
-        <CheckBox Content="Скорректирован" IsChecked="{Binding Prihod.Is_corrected}" Grid.Row="1" Grid.Column="3"/>
+        <CheckBox Content="Скорректирован" IsChecked="{Binding Prihod.Is_korr}" Grid.Row="1" Grid.Column="3"/>
         <usercontrols:ToolBarControl Grid.Row="3" Grid.Column="0" AddClick="ToolBarControl_AddClick" SaveClick="ToolBarControl_SaveClick" DeleteClick="ToolBarControl_DeleteClick" UpdateClick="ToolBarControl_UpdateClick"/>
 
         <DataGrid ItemsSource="{Binding Prihod.Sklad_prihod_tov}" AutoGenerateColumns="False" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" x:Name="datagridTovars">
             <DataGrid.Columns>
-                <DataGridComboBoxColumn Header="Товар" ItemsSource="{Binding Source={StaticResource TovaryList}}" SelectedValuePath="kod_tovara" SelectedValueBinding="{Binding Kod_tovara}" DisplayMemberPath="Naim2"/>
+                <DataGridComboBoxColumn Header="Товар" ItemsSource="{Binding Source={StaticResource TovaryList}}" SelectedValuePath="ID" SelectedValueBinding="{Binding ProductID}" DisplayMemberPath="Naim2"/>
                 <DataGridTemplateColumn IsReadOnly="True">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -52,8 +52,8 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTextColumn Header="Кол-во" x:Name="countCol" Binding="{Binding Count}" />
-                <DataGridTextColumn Header="Цена" x:Name="zenaCol" Binding="{Binding Zena}"/>
-                <DataGridTextColumn Header="Цена с доставкой" x:Name="zenadostCol" Binding="{Binding Zena_with_dost}"/>
+                <DataGridTextColumn Header="Цена" x:Name="zenaCol" Binding="{Binding Price}"/>
+                <DataGridTextColumn Header="Цена с доставкой" x:Name="zenadostCol" Binding="{Binding Price_with_deliv}"/>
                 <DataGridTextColumn Header="Стоимость" Binding="{Binding Cost}"/>
                 <DataGridTextColumn Header="Стоимость с доставкой" Binding="{Binding Cost_with_dost}"/>
             </DataGrid.Columns>
