--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -16,12 +16,16 @@
         </Grid.RowDefinitions>
 
         <Menu VerticalAlignment="Top">
+            <MenuItem Header="Справочники">
+                <MenuItem Header="Товары" x:Name="toavryM" Click="toavryM_Click"/>
+                <MenuItem Header="Производители" x:Name="manufM" Click="manufM_Click"/>
+                <MenuItem Header="Контрагенты" x:Name="contractorM" Click="contractorM_Click"/>
+            </MenuItem>
             <MenuItem Header="Счета" x:Name="shetaM" Click="shetaM_Click"/>
             <MenuItem Header="Склад">
                 <MenuItem Header="Приходы" x:Name="prihodsM" Click="prihodsM_Click"/>
-                <MenuItem Header="Расходы" x:Name="rashodsM" Click="rashodsM_Click"/>
+                <MenuItem Header="Расходы" x:Name="rashodsMя" Click="rashodsM_Click"/>
                 <MenuItem Header="Остатки" x:Name="ostatkiM" Click="ostatkiM_Click"/>
-                <MenuItem Header="Товары" x:Name="toavryM" Click="toavryM_Click"/>
             </MenuItem>
         </Menu>
 
