--- a/Client/Pages/ShetPage.xaml
+++ b/Client/Pages/ShetPage.xaml
@@ -39,6 +39,11 @@
             <TextBox hc:InfoElement.Title="Примечание" x:Name="PrimTB" Text="{Binding Shet.prim, UpdateSourceTrigger=PropertyChanged}" 
                      Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5" Grid.RowSpan="2" VerticalAlignment="Stretch" TextWrapping="Wrap"/>
 
+            <ComboBox IsEditable="False" Grid.Column="2" Grid.Row="0"
+                          hc:InfoElement.Title="Плательщик"
+                          ItemsSource="{Binding Contractors}" DisplayMemberPath="short_name" SelectedValuePath="Id" 
+                          SelectedValue="{Binding Shet.contractorID}"/>
+            
             <CheckBox Content="Оплачен" IsChecked="{Binding Shet.oplachen}" Grid.Row="5" Grid.Column="3" Height="28"/>
             <CheckBox Content="Корр" IsChecked="{Binding Shet.is_korr}" Grid.Row="5" Grid.Column="5" Height="28"/>
             <usercontrols:ToolBarControl Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" AddClick="AddBN_Click" SaveClick="SaveBN_Click" DeleteClick="ToolBarControl_DeleteClick" UpdateClick="ToolBarControl_UpdateClick" HorizontalAlignment="Left" />
@@ -77,7 +82,7 @@
 
             <ComboBox IsEditable="False" Grid.Column="0" Grid.Row="1"
                           hc:InfoElement.Title="Отпустил"
-                          ItemsSource="{Binding Users}" DisplayMemberPath="Surname" SelectedValuePath="Id" 
+                          ItemsSource="{Binding Users}" DisplayMemberPath="surname" SelectedValuePath="Id" 
                           SelectedValue="{Binding Shet.userID}"/>
 
             <Grid Grid.Column="2">
