--- a/Client/Pages/Sklad/RashodsPage.xaml
+++ b/Client/Pages/Sklad/RashodsPage.xaml
@@ -41,7 +41,7 @@
 
             <usercontrols:ToolBarControl Grid.Row="5" Grid.Column="0" AddClick="AddBN_Click" SaveClick="SaveBN_Click" DeleteClick="ToolBarControl_DeleteClick" UpdateClick="ToolBarControl_UpdateClick" HorizontalAlignment="Right" Width="400"/>
 
-            <hc:ComboBox hc:InfoElement.TitlePlacement="Left"  x:Name="ManagerCB" ShowClearButton="True" Grid.Row="0" Grid.Column="3" hc:InfoElement.Title="Отпустил" IsEditable="False" SelectedItem="{Binding SelectedManager}" ItemsSource="{Binding Spr_Managers_Filter}" DisplayMemberPath="Surname"/>
+            <hc:ComboBox hc:InfoElement.TitlePlacement="Left"  x:Name="ManagerCB" ShowClearButton="True" Grid.Row="0" Grid.Column="3" hc:InfoElement.Title="Отпустил" IsEditable="False" SelectedItem="{Binding SelectedManager}" ItemsSource="{Binding Spr_Managers_Filter}" DisplayMemberPath="surname"/>
             <hc:ComboBox hc:InfoElement.TitlePlacement="Left"  x:Name="TipOplatyCB" ShowClearButton="True"  Grid.Row="1" Grid.Column="3" hc:InfoElement.Title="Тип оплаты" IsEditable="False" SelectedItem="{Binding SelectedTipOpl}" ItemsSource="{Binding Spr_Oplat_Sklad}" DisplayMemberPath="naim"/>
             <ComboBox x:Name="OtgruzhenoCB" Grid.Row="0" Grid.Column="4" hc:InfoElement.Title="Отгружено" IsEditable="False" 
                       SelectedItem="{Binding SelectedOtgruzheno}" ItemsSource="{Binding EnumVseDaNet}"/>
@@ -61,7 +61,7 @@
                 <DataGridTextColumn Binding="{Binding Nom_rash}" Header="№" x:Name="nom_rash" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Date_rash, StringFormat=dd.MM.yyyy}" Header="Дата" x:Name="data_rash" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Date_otgruzki, StringFormat=dd.MM.yyyy}" Header="Дата отгр." x:Name="data_otgr" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Polz.Surname}" Header="Отпустил" x:Name="otgr" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Polz.surname}" Header="Отпустил" x:Name="otgr" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Prim}" Header="Прим" x:Name="prim"></DataGridTextColumn>
                 <DataGridCheckBoxColumn Binding="{Binding Is_tov_opl}" Header="Товар оплачен" x:Name="oplach"/>
                 <DataGridCheckBoxColumn Binding="{Binding IsDostOpl}" Header="Дост. опл" x:Name="oplach_dost"/>
