--- a/Client/Pages/TovaryPage.xaml
+++ b/Client/Pages/TovaryPage.xaml
@@ -47,6 +47,7 @@
             <TextBox Text="{Binding SelectedTovar.material, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Title="Материал"/>
             <TextBox Text="{Binding SelectedTovar.zvet, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Title="Цвет"/>
             <hc:ComboBox SelectedValue="{Binding SelectedTovar.CategoryID}"  Margin="5" SelectedValuePath="ID" DisplayMemberPath="short_name" ItemsSource="{Binding Categories}" hc:InfoElement.Title="Категория"/>
+            <hc:ComboBox SelectedValue="{Binding SelectedTovar.manufID}"  Margin="5" SelectedValuePath="ID" DisplayMemberPath="Name" ItemsSource="{Binding Manufactures}" hc:InfoElement.Title="Производитель"/>
             <hc:NumericUpDown Value="{Binding SelectedTovar.kol_list_v_pachke}" hc:InfoElement.Title="Кол-во листов в пачке" hc:InfoElement.Necessary="True"/>
 
         </StackPanel>
