--- a/Client/Pages/ShetPage.xaml
+++ b/Client/Pages/ShetPage.xaml
@@ -39,7 +39,7 @@
             <TextBox hc:InfoElement.Title="Примечание" x:Name="PrimTB" Text="{Binding Shet.prim, UpdateSourceTrigger=PropertyChanged}" 
                      Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5" Grid.RowSpan="2" VerticalAlignment="Stretch" TextWrapping="Wrap"/>
 
-            <ComboBox IsEditable="False" Grid.Column="2" Grid.Row="0"
+            <hc:ComboBox IsEditable="False" Grid.Column="2" Grid.Row="0"
                           hc:InfoElement.Title="Плательщик"
                           ItemsSource="{Binding Contractors}" DisplayMemberPath="short_name" SelectedValuePath="Id" 
                           SelectedValue="{Binding Shet.contractorID}"/>
