--- a/Client/Pages/Sklad/PrihodPage.xaml
+++ b/Client/Pages/Sklad/PrihodPage.xaml
@@ -26,15 +26,15 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Text="{Binding Prihod.Nom_prih}" Grid.Column="0" Grid.Row="0" hc:InfoElement.Title="Номер"/>
+        <TextBox Text="{Binding Prihod.Nom_prih, UpdateSourceTrigger=PropertyChanged}" Grid.Column="0" Grid.Row="0" hc:InfoElement.Title="Номер"/>
         <ComboBox Grid.Column="1" ItemsSource="{Binding Contractors}" DisplayMemberPath="short_name" SelectedValuePath="ID" hc:InfoElement.Title="Получатель" 
                   SelectedValue="{Binding Prihod.ContractorID}"/>
 
         <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{Binding Prihod.Date_prih}" hc:InfoElement.Title="Дата"/>
         <TextBox Grid.Row="2" Grid.Column="0" Text="{Binding Prihod.Prim, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Title="Примечание"/>
 
-        <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Prihod.Deliv_cost}" hc:InfoElement.Title="Стоимость доставки" IsEnabled="{Binding Prihod.Cost_Dost_Enable}"/>
-        <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding Prihod.Dop_rash}" hc:InfoElement.Title="Доп. расходы"/>
+        <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Prihod.Deliv_cost, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Title="Стоимость доставки" IsEnabled="{Binding Prihod.Cost_Dost_Enable}"/>
+        <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding Prihod.Dop_rash, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Title="Доп. расходы"/>
 
         <CheckBox Content="Транспорт поставщика" IsChecked="{Binding Prihod.Transport_ot_post}" Grid.Row="2" Grid.Column="2" x:Name="trans_ot_postCheckBox"/>
         <CheckBox Content="На складе" IsChecked="{Binding Prihod.Is_in_sklad}" Grid.Row="2" Grid.Column="3"/>
